<resources>
    <string name="N_A">N/A</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="TrackType_video">Video</string>
    <string name="btn_0">btn0</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="a_cache">a-cache</string>
    <string name="a_d">A.D.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ac_below_horizon">Below the horizon</string>
    <string name="ac_custom_center_here">Center Here</string>
    <string name="ac_custom_connect_mount_first">Connect Mount first</string>
    <string name="ac_custom_current_pos_calculate_failed">Current position calculate failed</string>
    <string name="ac_custom_ensure_focal"><Data>Ensure Focal Length is correct and &lt;br>FOV is in the range of 0.2°-33° </Data></string>
    <string name="ac_custom_ensure_focal_pi3"><Data>Ensure Focal Length is correct and &lt;br>FOV is in the range of 0.4°-33° </Data></string>
    <string name="ac_custom_solving_and_calculate_current_pos">Solving and calculating Current Position</string>
    <string name="ac_custom_solving_fail">Solve failed, maybe clouds rolled in or too few stars</string>
    <string name="ac_dialog_ac_attempt_2">Auto-centering attempt once</string>
    <string name="ac_dialog_ac_attempt_3">Auto-centering attempt twice</string>
    <string name="ac_dialog_ac_attempt_4">Auto-centering attempt third</string>
    <string name="ac_dialog_ac_fail_attempt_2">Solving Failed, attempt once</string>
    <string name="ac_dialog_ac_fail_attempt_3">Solving Failed, attempt twice</string>
    <string name="ac_dialog_ac_fail_attempt_4">Solving Failed, attempt third</string>
    <string name="ac_dialog_ac_fail_attempt_5">Auto-center failed, retry 5th</string>
    <string name="ac_dialog_ac_failed">Auto-center failed, distance is too far</string>
    <string name="ac_dialog_ac_failed_exp">Shooting Failure</string>
    <string name="ac_dialog_ac_failed_solve">Plate Solving Failed</string>
    <string name="ac_dialog_ac_merid_flip_failed">Meridian flip failed， wait for the next Flip.</string>
    <string name="ac_dialog_ac_mount_get_coord">Failed to read the RA/DEC of the mount</string>
    <string name="ac_dialog_ac_mount_goto">Failed to slew the mount</string>
    <string name="ac_dialog_ac_mount_opt">Mount Operation Failed</string>
    <string name="ac_dialog_ac_mount_set_pierside_failed">The Pier Side is wrong</string>
    <string name="ac_dialog_ac_mount_sync">Failed to set</string>
    <string name="ac_dialog_ac_success">Auto-center succeeded</string>
    <string name="ac_dialog_ac_uncentered_attempt_1">Uncentered, retry once</string>
    <string name="ac_dialog_ac_uncentered_attempt_2">Uncentered, retry twice</string>
    <string name="ac_dialog_ac_uncentered_attempt_3">Uncentered, retry third</string>
    <string name="ac_dialog_ac_uncentered_attempt_n">Uncentered, retry %1$d th</string>
    <string name="ac_dialog_attempt_ac_ing">Uncentered, attempt to auto-center</string>
    <string name="ac_dialog_check_in_center">Validate centered or not</string>
    <string name="ac_dialog_current">Current: </string>
    <string name="ac_dialog_move_to_target_pos">Mount slews to target position</string>
    <string name="ac_dialog_target">Target: </string>
    <string name="ac_dialog_target_in_center">Target is centered</string>
    <string name="ac_downloading">Loading...</string>
    <string name="ac_flip_dialog_ac_try">Uncentered, retrying %1$d th</string>
    <string name="ac_flip_dialog_exit">Autorun will be stopped after exiting</string>
    <string name="ac_flip_dialog_exit_title">Exit Meridian Flip</string>
    <string name="ac_flip_dialog_solve_try">Solving Failed, attempt %1$d th</string>
    <string name="ac_flip_dialog_title_1">First Meridian Flip</string>
    <string name="ac_flip_dialog_title_2">Second Meridian Flip</string>
    <string name="ac_flip_dialog_title_3">3rd Meridian Flip</string>
    <string name="ac_flip_dialog_title_n">%1$dth Meridian Flip</string>
    <string name="ac_shooting">Shooting...</string>
    <string name="ac_solving">Solving...</string>
    <string name="ac_solving_with_star">Detected %1$s stars</string>
    <string name="ac_wait_flip_dialog_title_1">Wait for Meridian Flip</string>
    <string name="ac_wait_flip_dialog_title_2">Wait for the 2nd Meridian Flip</string>
    <string name="ac_wait_flip_dialog_title_3">Wait for the 3rd Meridian Flip</string>
    <string name="ac_wait_flip_dialog_title_n">Wait for the %1$dth Meridian Flip</string>
    <string name="accept">Accept</string>
    <string name="access_external_storage_rationale">We need access external storage to save pictures</string>
    <string name="access_storage_and_camera">We need access storage and camera</string>
    <string name="action_add">Add</string>
    <string name="add">Add</string>
    <string name="advanced_setting">Advanced Settings</string>
    <string name="af">AF</string>
    <string name="af_auto_run_condition_after_med_flip">after Auto Meridian flipped</string>
    <string name="af_auto_run_condition_attention">"'every X change' and 'every X hours' is based on the last EAF record, 'before each target starting' does not take effect after resume from shooting"</string>
    <string name="af_auto_run_condition_before_shoot">before each object starting</string>
    <string name="af_auto_run_condition_change_filter_wheel">after filter change</string>
    <string name="af_auto_run_condition_temperature">every X change</string>
    <string name="af_auto_run_condition_time_interval">every X hour</string>
    <string name="af_auto_run_title">Run Auto Focus in Autorun and Plan Modes</string>
    <string name="af_chart_title">EAF Position</string>
    <string name="af_desc">Tracking will be enabled when in the AF routine</string>
    <string name="af_dialog_device_abnormal_content">Ensure current position is away from 0 and Max Step Limit so the EAF is movable</string>
    <string name="af_dialog_device_abnormal_ok">OK</string>
    <string name="af_dialog_device_abnormal_title">Device Abnormal</string>
    <string name="af_dialog_device_change_content">EAF was plugged out, please connect it manually</string>
    <string name="af_dialog_device_change_ok">OK</string>
    <string name="af_dialog_device_change_title">Device Changed</string>
    <string name="af_dialog_stop_af_auto_run_cancel">Cancel</string>
    <string name="af_dialog_stop_af_auto_run_content">EAF position will be returned to the last focus point and Autorun will be continued</string>
    <string name="af_dialog_stop_af_auto_run_stop">Stop</string>
    <string name="af_dialog_stop_af_auto_run_title">Stop Auto Focus</string>
    <string name="af_dialog_stop_af_cancel">Cancel</string>
    <string name="af_dialog_stop_af_content">Not found focus position yet, the EAF will be returned to the last focus position if you stop it</string>
    <string name="af_dialog_stop_af_stop">Stop</string>
    <string name="af_dialog_stop_af_title">Stop Auto Focus</string>
    <string name="af_eaf_step">Step Size</string>
    <string name="air_unconnected">Service Unconnected</string>
    <string name="btn_tonight_best_add">Add</string>
    <string name="btn_tonight_best_center">Center</string>
    <string name="btn_tonight_best_confirm">Confirm</string>
    <string name="btn_tonight_best_goto">GoTo</string>
    <string name="connect">Connect</string>
    <string name="connect_guide_connect_content"><Data>Connect to ASIAIR WiFi, eg. ASIAIR_xxxxxxxx, default password is &lt;font color=#DCDCDC>12345678&lt;/font>&lt;br>If ASIAIR device is connected via STA Mode or Ethernet, tap Scan, select and Connect</Data></string>
    <string name="connect_guide_connect_title">Connect to ASIAIR Device</string>
    <string name="connect_guide_led"><Data>Have problems? &lt;font color=#259B24>Check LED Status&lt;/font></Data></string>
    <string name="connect_guide_policy">开始使用前，请阅读并同意《用户协议》和《隐私政策》</string>
    <string name="connect_guide_power_content">"Power the ASIAIR with a 12V power adapter and turn it on
You will hear the booting sound in 1 minute"</string>
    <string name="connect_guide_power_title">Power the ASIAIR and Turn It On</string>
    <string name="current_network">Mobile Network: </string>
    <string name="empty_result">"You haven't added any objects yet. Go and add"</string>
    <string name="group_tonight_best">"Tonight's Best"</string>
    <string name="guide_step_two_ip_connect">Connect via IP</string>
    <string name="guide_step_two_not_found_air">ASIAIR not found</string>
    <string name="guide_step_two_scan_null">No result?</string>
    <string name="help">Help</string>
    <string name="more">More</string>
    <string name="scan">Scan</string>
</resources>