<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_15_dark_background_black">

    <com.example.ui_demo_start.view.QMUINotchConsumeLayout
        android:id="@id/container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:id="@+id/rl_empty_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/icon_empty_list"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/empty_result"
                android:textColor="@color/color_dcdcdc_50" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp_47"
                android:layout_alignParentTop="true">

                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="@dimen/dp_45"
                    android:layout_height="@dimen/dp_45"
                    android:layout_centerVertical="true"
                    android:background="@drawable/tonight_best_icon_back" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/group_tonight_best"
                    android:textColor="@color/color_dcdcdc_white"
                    android:textSize="@dimen/sp_18" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/search_menu"
                    android:layout_width="@dimen/dp_45"
                    android:layout_height="@dimen/dp_45"
                    android:layout_centerInParent="true"
                    android:layout_toLeftOf="@+id/list_menu"
                    android:padding="@dimen/dp_10"
                    android:src="@drawable/tonight_best_icon_search"
                    app:tint="#ffffffff" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/list_menu"
                    android:layout_width="@dimen/dp_45"
                    android:layout_height="@dimen/dp_45"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:padding="@dimen/dp_10"
                    android:src="@drawable/tonight_best_icon_menu" />

                <View
                    style="@style/style_15_divider_horizontal"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/object_recycler_view"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scrollbars="none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom|center"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            android:gravity="end|bottom|center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_opt_bar"
                android:layout_width="@dimen/dp_48"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_12"
                android:background="@drawable/shape_round_muti_choose_object_right"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="@dimen/dp_10">

                <LinearLayout
                    android:id="@+id/ensure_object_choose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_width="@dimen/dp_40"
                        android:layout_height="@dimen/dp_40"
                        android:src="@drawable/tonight_best_icon_selected" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_tonight_best_confirm"
                        android:textColor="@color/color_15_light_text_tip"
                        android:textSize="@dimen/sp_11" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ensure_object_goto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_width="@dimen/dp_40"
                        android:layout_height="@dimen/dp_40"
                        android:src="@drawable/tonight_best_icon_goto" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_tonight_best_goto"
                        android:textColor="@color/color_15_light_text_tip"
                        android:textSize="@dimen/sp_11" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ensure_object_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:layout_width="@dimen/dp_40"
                        android:layout_height="@dimen/dp_40"
                        android:src="@drawable/tonight_best_icon_center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_tonight_best_center"
                        android:textColor="@color/color_15_light_text_tip"
                        android:textSize="@dimen/sp_11" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_add_custom_obj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone"
                    >

                    <ImageView
                        android:layout_width="@dimen/dp_40"
                        android:layout_height="@dimen/dp_40"
                        android:src="@drawable/tonight_best_icon_add_object" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_tonight_best_add"
                        android:textColor="@color/color_15_light_text_tip"
                        android:textSize="@dimen/sp_11" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/goto_top_fab"
                android:layout_width="@dimen/dp_48"
                android:layout_height="@dimen/dp_48"
                android:background="@drawable/tonight_best_icon_backtop"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_multi_select"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_64"
            android:layout_gravity="bottom|center|left"
            android:layout_marginRight="@dimen/dp_88"
            android:layout_marginBottom="@dimen/dp_20"
            android:gravity="end|bottom|center"
            android:orientation="vertical"
            android:visibility="gone">

            <include
                layout="@layout/layout_multi_choose_object"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/pop_group_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/transparent_40"
            android:visibility="gone">

            <include
                android:id="@+id/pop_group_list"
                layout="@layout/layout_choose_object_pop_list" />
        </RelativeLayout>
    </com.example.ui_demo_start.view.QMUINotchConsumeLayout>
</FrameLayout>